--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-<title>Acme Space Travel, Inc</title>
+<title>Beta Corp</title>
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ojuju&display=swap');
 html { 
-    background-color: black; 
+    background-color: white; 
     margin: 0; 
-    font-family: 'Orbitron', sans-serif; 
-    color: #a0a0a0;
+    font-family: 'Ojuju', sans-serif; 
+    color: #444;
 }
 body { 
     background-image: url("banner.jpg"); 
@@ -17,19 +17,18 @@ body {
 }
 h1 { 
     size: 64pt; 
-    color: white; 
     padding-bottom: 240px;
     text-align: right; 
 }
-h2 { size: 14pt; color: #e0e0e0; }
+h2 { size: 14pt; }
 </style>
 <link href="favicon.png" rel="shortcut icon" type="image/x-icon">
 </head>
 <body>
-<h1>Acme Space Travel</h1>
-<h2>We are selling tickets to Mars. Want one?</h2>
-<p>Several companies are racing to design and crew the first manned missions to the red planet, but we're looking beyond that, to a day when tourism is possible.</p>
-<p> It won't be cheap or risk-free. But it will be possible, and you can be among the first.</p>
+<h1>Beta Corp</h1>
+<h2>Commercial Aquaculture</h2>
+<p>Farming cattle, pigs, or chickens is expensive, bad for the environment, and unprofitable. Invest in fish instead. It's cheap, predictable, and fabulous for ecosystems.</p>
+<p>We teach you how, set you up with the right equipment and legal permits, and connect you to suppliers and customers.</p>
 <p>Contact us at info @ ourdomain if you want to know more.</p>
 </body>
 </html>
