--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ html {
     background-color: white; 
     margin: 0; 
     font-family: 'Ojuju', sans-serif; 
-    color: #444;
+    color: black;
 }
 body { 
     background-image: url("banner.jpg"); 
